homework/kubernetes-test/solution/part-a/k8s-manifests/gitlab/kompose/development-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: development
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/development: "true"
  podSelector:
    matchLabels:
      io.kompose.network/development: "true"
